@@ -2,6 +2,7 @@
 
 {{$NEXT}}
   - migrated to Dist::Zilla
+  - added method plain_literal
 
 0.11 2014-04-09T12:56:37
  - don't die on malformed IRIs
